app/assets/stylesheets/videos.scss
// Place all the styles related to the Videos controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

form label.form-label {
  position: absolute;
  top: -16px;
  background-color: white;
  padding: 0 5px;
}
.video-description {
  white-space: pre-line;
  max-height: 170px;
  overflow: scroll;
}

